# pr

./: .gitignore  .goreleaser.yaml  BUILD.bazel  README.md  WORKSPACE  deps.bzl  dist.sh  genqlient.yaml  go.mod  go.sum  main.go
bitbucket/: BUILD.bazel  README.md  api_addon.go  api_branch_restrictions.go  api_branching_model.go  api_commit_statuses.go  api_commits.go  api_deployments.go  api_downloads.go  api_issue_tracker.go  api_pipelines.go  api_projects.go  api_properties.go  api_pullrequests.go  api_refs.go  api_reports.go  api_repositories.go  api_search.go  api_snippets.go  api_source.go  api_ssh.go  api_teams.go  api_users.go  api_webhooks.go  api_workspaces.go  client.go  configuration.go  model_account.go  model_author.go  model_base_commit.go  model_branch.go  model_branching_model.go  model_branching_model_settings.go  model_branchrestriction.go  model_comment.go  model_commit.go  model_commit_comment.go  model_commit_file.go  model_commitstatus.go  model_component.go  (+168 more)
bitbucket/api/: swagger.yaml
bitbucket/docs/: Account.md  BaseCommit.md  Branch.md  BranchingModel.md  BranchingModelApi.md  BranchingModelSettings.md  Branchrestriction.md  Comment.md  Commit.md  CommitComment.md  CommitsApi.md  Commitstatus.md  Component.md  DeployKey.md  DeploymentsApi.md  Group.md  Issue.md  IssueAttachment.md  IssueChange.md  IssueComment.md  IssueTrackerApi.md  Milestone.md  ModelError.md  Participant.md  PipelinesApi.md  Project.md  ProjectsApi.md  PropertiesApi.md  Pullrequest.md  PullrequestComment.md  PullrequestEndpoint.md  PullrequestsApi.md  Ref.md  RepositoriesApi.md  Repository.md  SnippetComment.md  SnippetCommit.md  SnippetsApi.md  SshAccountKey.md  SshKey.md  (+10 more)
cmd/: BUILD.bazel  approvePr.go  auth.go  branches.go  list.go  listBranches.go  pager.go  pr.go  prNew.go  prShow.go  prStatus.go  root.go
cmd/ui/: BUILD.bazel  contentView.go  fileList.go  prStatusView.go  prViewer.go  pullRequestHeader.go  statusBar.go
cmd/ui/simpleEditor/: BUILD.bazel  editor.go
cmd/ui/statusView/: BUILD.bazel  prStatusView.go
docs/: .graphqlconfig  genqlient.graphql  graphqlconfig.template  schema.graphql
jira/: BUILD.bazel  jira_utils.go
sv/: BUILD.bazel  bitbucket.go  common.go  github.go  github_queries_gen.go  pager.go
sv/gh_utils/: BUILD.bazel  github_utils.go
