load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

#load("@io_bazel_rules_go//go:def.bzl", "go_binary")

#go_binary(
#    name = "svc",
#    srcs = ["main.go"],
#)

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/vballestra/sv
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_binary(
    name = "project",
    embed = [":sv_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "sv_lib",
    srcs = ["main.go"],
    importpath = "github.com/vballestra/sv",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)
