load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bitbucket",
    srcs = [
        "api_addon.go",
        "api_branch_restrictions.go",
        "api_branching_model.go",
        "api_commit_statuses.go",
        "api_commits.go",
        "api_deployments.go",
        "api_downloads.go",
        "api_issue_tracker.go",
        "api_pipelines.go",
        "api_projects.go",
        "api_properties.go",
        "api_pullrequests.go",
        "api_refs.go",
        "api_reports.go",
        "api_repositories.go",
        "api_search.go",
        "api_snippets.go",
        "api_source.go",
        "api_ssh.go",
        "api_teams.go",
        "api_users.go",
        "api_webhooks.go",
        "api_workspaces.go",
        "client.go",
        "configuration.go",
        "model_account.go",
        "model_author.go",
        "model_base_commit.go",
        "model_branch.go",
        "model_branching_model.go",
        "model_branching_model_settings.go",
        "model_branchrestriction.go",
        "model_comment.go",
        "model_commit.go",
        "model_commit_comment.go",
        "model_commit_file.go",
        "model_commitstatus.go",
        "model_component.go",
        "model_ddev_report.go",
        "model_deploy_key.go",
        "model_deployment.go",
        "model_deployment_environment.go",
        "model_deployment_environment_lock.go",
        "model_deployment_release.go",
        "model_deployment_state.go",
        "model_deployment_state_completed.go",
        "model_deployment_state_completed_status.go",
        "model_deployment_state_completed_status_failed.go",
        "model_deployment_state_completed_status_stopped.go",
        "model_deployment_state_completed_status_successful.go",
        "model_deployment_state_in_progress.go",
        "model_deployment_state_undeployed.go",
        "model_deployment_variable.go",
        "model_deployments_ddev_deployment_environment.go",
        "model_deployments_ddev_deployment_environment_lock.go",
        "model_deployments_ddev_paginated_environments.go",
        "model_deployments_stg_west_deployment_environment.go",
        "model_deployments_stg_west_deployment_environment_lock.go",
        "model_deployments_stg_west_paginated_environments.go",
        "model_diffstat.go",
        "model_error.go",
        "model_export_options.go",
        "model_group.go",
        "model_hook_event.go",
        "model_issue.go",
        "model_issue_attachment.go",
        "model_issue_change.go",
        "model_issue_comment.go",
        "model_issue_job_status.go",
        "model_jira_project.go",
        "model_jira_site.go",
        "model_milestone.go",
        "model_object.go",
        "model_page.go",
        "model_paginated_annotations.go",
        "model_paginated_branches.go",
        "model_paginated_branchrestrictions.go",
        "model_paginated_changeset.go",
        "model_paginated_commit_comments.go",
        "model_paginated_commitstatuses.go",
        "model_paginated_components.go",
        "model_paginated_deploy_keys.go",
        "model_paginated_deployment_variable.go",
        "model_paginated_deployments.go",
        "model_paginated_diffstats.go",
        "model_paginated_environments.go",
        "model_paginated_files.go",
        "model_paginated_hook_events.go",
        "model_paginated_issue_attachments.go",
        "model_paginated_issue_comments.go",
        "model_paginated_issues.go",
        "model_paginated_log_entries.go",
        "model_paginated_milestones.go",
        "model_paginated_pipeline_caches.go",
        "model_paginated_pipeline_known_hosts.go",
        "model_paginated_pipeline_schedule_executions.go",
        "model_paginated_pipeline_schedules.go",
        "model_paginated_pipeline_steps.go",
        "model_paginated_pipeline_variables.go",
        "model_paginated_pipelines.go",
        "model_paginated_projects.go",
        "model_paginated_pullrequest_comments.go",
        "model_paginated_pullrequests.go",
        "model_paginated_refs.go",
        "model_paginated_reports.go",
        "model_paginated_repositories.go",
        "model_paginated_repository_permissions.go",
        "model_paginated_snippet_comments.go",
        "model_paginated_snippet_commit.go",
        "model_paginated_snippets.go",
        "model_paginated_ssh_user_keys.go",
        "model_paginated_tags.go",
        "model_paginated_team_permissions.go",
        "model_paginated_teams.go",
        "model_paginated_treeentries.go",
        "model_paginated_users.go",
        "model_paginated_versions.go",
        "model_paginated_webhook_subscriptions.go",
        "model_paginated_workspace_memberships.go",
        "model_paginated_workspaces.go",
        "model_participant.go",
        "model_pipeline.go",
        "model_pipeline_build_number.go",
        "model_pipeline_cache.go",
        "model_pipeline_cache_content_uri.go",
        "model_pipeline_command.go",
        "model_pipeline_commit_target.go",
        "model_pipeline_error.go",
        "model_pipeline_image.go",
        "model_pipeline_known_host.go",
        "model_pipeline_ref_target.go",
        "model_pipeline_schedule.go",
        "model_pipeline_schedule_execution.go",
        "model_pipeline_schedule_execution_errored.go",
        "model_pipeline_schedule_execution_executed.go",
        "model_pipeline_selector.go",
        "model_pipeline_ssh_key_pair.go",
        "model_pipeline_ssh_public_key.go",
        "model_pipeline_state.go",
        "model_pipeline_state_completed.go",
        "model_pipeline_state_completed_error.go",
        "model_pipeline_state_completed_expired.go",
        "model_pipeline_state_completed_failed.go",
        "model_pipeline_state_completed_result.go",
        "model_pipeline_state_completed_stopped.go",
        "model_pipeline_state_completed_successful.go",
        "model_pipeline_state_in_progress.go",
        "model_pipeline_state_in_progress_paused.go",
        "model_pipeline_state_in_progress_running.go",
        "model_pipeline_state_in_progress_stage.go",
        "model_pipeline_state_pending.go",
        "model_pipeline_step.go",
        "model_pipeline_step_error.go",
        "model_pipeline_step_state.go",
        "model_pipeline_step_state_completed.go",
        "model_pipeline_step_state_completed_error.go",
        "model_pipeline_step_state_completed_expired.go",
        "model_pipeline_step_state_completed_failed.go",
        "model_pipeline_step_state_completed_not_run.go",
        "model_pipeline_step_state_completed_result.go",
        "model_pipeline_step_state_completed_stopped.go",
        "model_pipeline_step_state_completed_successful.go",
        "model_pipeline_step_state_in_progress.go",
        "model_pipeline_step_state_pending.go",
        "model_pipeline_step_state_ready.go",
        "model_pipeline_target.go",
        "model_pipeline_trigger.go",
        "model_pipeline_trigger_manual.go",
        "model_pipeline_trigger_push.go",
        "model_pipeline_variable.go",
        "model_pipelines_config.go",
        "model_pipelines_ddev_pipeline_step.go",
        "model_pipelines_stg_west_pipeline_step.go",
        "model_project.go",
        "model_pullrequest.go",
        "model_pullrequest_comment.go",
        "model_pullrequest_endpoint.go",
        "model_pullrequest_merge_parameters.go",
        "model_ref.go",
        "model_report.go",
        "model_report_annotation.go",
        "model_report_data.go",
        "model_repository.go",
        "model_repository_permission.go",
        "model_search_code_search_result.go",
        "model_search_content_match.go",
        "model_search_line.go",
        "model_search_result_page.go",
        "model_search_segment.go",
        "model_snippet.go",
        "model_snippet_comment.go",
        "model_snippet_commit.go",
        "model_ssh_account_key.go",
        "model_ssh_key.go",
        "model_stg_west_report.go",
        "model_subject_types.go",
        "model_tag.go",
        "model_team.go",
        "model_team_permission.go",
        "model_treeentry.go",
        "model_user.go",
        "model_version.go",
        "model_webhook_subscription.go",
        "model_workspace.go",
        "model_workspace_membership.go",
        "response.go",
    ],
    importpath = "github.com/vballestra/sv/bitbucket",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_antihax_optional//:optional",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
