load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sv",
    srcs = [
        "bitbucket.go",
        "common.go",
        "github.go",
        "pager.go",
    ],
    cgo = True,
    importpath = "github.com/vballestra/sv/sv",
    visibility = ["//visibility:public"],
    deps = [
        "//bitbucket",
        "@com_github_antihax_optional//:optional",
        "@com_github_bluekeyes_go_gitdiff//gitdiff",
        "@com_github_briandowns_spinner//:spinner",
        "@com_github_cli_cli_v2//api",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/transport/ssh",
        "@com_github_google_go_github_v43//github",
        "@com_github_pterm_pterm//:pterm",
        "@com_github_shurcool_githubv4//:githubv4",
        "@com_github_xanzy_ssh_agent//:ssh-agent",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_crypto//ssh/agent",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
