load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ui",
    srcs = [
        "contentView.go",
        "fileList.go",
        "prStatusView.go",
        "prViewer.go",
        "pullRequestHeader.go",
        "statusBar.go",
    ],
    cgo = True,
    importpath = "github.com/vballestra/sv/cmd/ui",
    visibility = ["//visibility:public"],
    deps = [
        "//sv",
        "@com_github_bluekeyes_go_gitdiff//gitdiff",
        "@com_github_charmbracelet_bubbles//viewport",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_glamour//:glamour",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_erikgeiser_promptkit//confirmation",
        "@com_github_evertras_bubble_table//table",
        "@com_github_pterm_pterm//:pterm",
        "@com_github_treilik_bubbleboxer//:bubbleboxer",
    ],
)
