load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "simpleEditor",
    srcs = ["editor.go"],
    importpath = "github.com/vballestra/sv/cmd/ui/simpleEditor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_charmbracelet_bubbles//textarea",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
    ],
)
